Archive2/27/d79b9fcb51fd0e/output
In file included from main.cpp:5:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/array:35:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:10:10: error: no member named 'array' in namespace 'std'
    std::array<int, 3> a1{ {1, 2, 3} }; // double-braces required in C++11 (not in C++14)
    ~~~~~^
main.cpp:10:19: error: expected '(' for function-style cast or type construction
    std::array<int, 3> a1{ {1, 2, 3} }; // double-braces required in C++11 (not in C++14)
               ~~~^
main.cpp:10:24: error: use of undeclared identifier 'a1'
    std::array<int, 3> a1{ {1, 2, 3} }; // double-braces required in C++11 (not in C++14)
                       ^
main.cpp:11:10: error: no member named 'array' in namespace 'std'
    std::array<int, 3> a2 = {1, 2, 3};  // never required after =
    ~~~~~^
main.cpp:11:19: error: expected '(' for function-style cast or type construction
    std::array<int, 3> a2 = {1, 2, 3};  // never required after =
               ~~~^
main.cpp:11:24: error: use of undeclared identifier 'a2'
    std::array<int, 3> a2 = {1, 2, 3};  // never required after =
                       ^
main.cpp:11:29: error: expected expression
    std::array<int, 3> a2 = {1, 2, 3};  // never required after =
                            ^
main.cpp:12:10: error: no member named 'array' in namespace 'std'
    std::array<std::string, 2> a3 = { std::string("a"), "b" };
    ~~~~~^
main.cpp:12:27: error: expected '(' for function-style cast or type construction
    std::array<std::string, 2> a3 = { std::string("a"), "b" };
               ~~~~~~~~~~~^
main.cpp:12:32: error: use of undeclared identifier 'a3'
    std::array<std::string, 2> a3 = { std::string("a"), "b" };
                               ^
main.cpp:12:37: error: expected expression
    std::array<std::string, 2> a3 = { std::string("a"), "b" };
                                    ^
main.cpp:15:15: error: use of undeclared identifier 'a1'
    std::sort(a1.begin(), a1.end());
              ^
main.cpp:15:27: error: use of undeclared identifier 'a1'
    std::sort(a1.begin(), a1.end());
                          ^
main.cpp:16:23: error: use of undeclared identifier 'a2'
    std::reverse_copy(a2.begin(), a2.end(), 
                      ^
main.cpp:16:35: error: use of undeclared identifier 'a2'
    std::reverse_copy(a2.begin(), a2.end(), 
                                  ^
main.cpp:22:15: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for(const auto& s: a3)
              ^
main.cpp:22:24: error: use of undeclared identifier 'a3'
    for(const auto& s: a3)
                       ^
main.cpp:22:22: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for(const auto& s: a3)
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
